--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#323751" />
+    <meta name="theme-color" content="#117E9B" />
     <meta name="description" content="Seja sua propria Fintech" />
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#323751" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap" rel="stylesheet"> 
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>FitBank 450</title>
+    <title>StoneBank</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
